# argus

./: CMakeLists.txt  README.md  agents.md
cmd/argus/: main.cpp
core/compose/: compose_handle.cpp  compose_handle.h  compose_type.cpp  compose_type.h  icompose.h
core/compose/clip_prompt/: clip_prompt_compose.cpp  clip_prompt_compose.h  clip_tokenizer.cpp  clip_tokenizer.h  mobileclip2_s2_engine.cpp  mobileclip2_s2_engine.h  model_path.cpp  model_path.h
core/compose/common/: jpg_writer.cpp  jpg_writer.h
core/compose/jpg_snapshot/: jpg_snapshot_compose.cpp  jpg_snapshot_compose.h
core/compose/side_by_side/: side_by_side_compose.cpp  side_by_side_compose.h  side_by_side_frame.cpp  side_by_side_frame.h
core/decoder/: decoded_video_consumer.h  decoder_handle.cpp  decoder_handle.h  decoder_runner.cpp  decoder_runner.h  h264_decoder.cpp  h264_decoder.h  idecoder.h  packet_adapter.cpp  packet_adapter.h  video_frame.h  video_frame_utils.cpp  video_frame_utils.h
core/mux/: remux_muxer.cpp  remux_muxer.h
core/runtime/: iserver.h  runtime.cpp  runtime.h  runtime_http.cpp  runtime_http.h  runtime_manifest.cpp  runtime_manifest.h  runtime_state.h  sink_handle.cpp  sink_handle.h
core/servers/rtmp/: rtmp_amf0.c  rtmp_amf0.h  rtmp_chunk.c  rtmp_chunk.h  rtmp_handshake.c  rtmp_handshake.h  rtmp_server.cpp  rtmp_server.h  rtmp_session.cpp  rtmp_session.h
core/servers/webrtc/: webrtc_server.cpp  webrtc_server.h
core/sinks/: hls_sink.cpp  hls_sink.h  hls_sink_runner.cpp  hls_sink_runner.h  remux_sink_runner.cpp  remux_sink_runner.h
core/sources/: README.md  buffered_source.cpp  buffered_source.h  ipacket_reader.h  isource.h  isource_subscription.h  packet_timeline.h  packet_typing.cpp  packet_typing.h  source_packet.h  source_queue.h  subscription_filter.h  subscription_packet_reader.cpp  subscription_packet_reader.h
core/tests/: clip_tokenizer_test.cpp  go.mod  model_path_test.cpp  multi_server_integration_test.go  packet_adapter_test.cpp  remux_muxer_test.cpp  rtmp_client_test.go  rtmp_protocol_test.go  rtmp_server_integration_test.go  runtime_http_integration_test.go  runtime_manifest_test.cpp  side_by_side_frame_test.cpp  webrtc_server_integration_test.go
docs/: benchmark.md  compose.md  design_options.md  events.md  execution_model.md  final_design.md  options.md  pipeline.md  redesign.md  result.md  runtime.md  runtime_milestones.md  scene.example.yaml  scene_spec.md  scene_v1.json  scene_v10.json  source.md  v1.md  v2.md  v7.md  versioning.md
docs/scenarios/: complex_two_source.md
models/mobileclip2_s2/: .gitignore
tools/: download_mobileclip2_s2_models.sh  vendor_libdatachannel.sh
